force-app/main/default/objects/AAO_Evidence_Contract__c/AAO_Evidence_Contract__c.object-meta.xml
<CustomObject>
    <description>Per proposition, per version of its text. Rule data, derived at runtime from the customer&apos;s methodology, versioned, never deleted.</description>
    <label>AAO Evidence Contract</label>
    <nameField>
        <displayFormat>EC-{00000000}</displayFormat>
        <label>AAO Evidence Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Evidence Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>