force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Charter_Designation__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter_Designation__c</fullName>
    <description>Which charter owns this contract. Written by: the contract seeders - AAO_PeopleContracts stamps People, AAO_Discovery and AAO_Demo stamp Process. Read by: the rubric resolver (AAO_ApplicableSet), which resolves a declared charter set per charter because the scoping rule differs by kind. Never read by a charter itself: a charter's handed unit is the Evidence Contract and it never sees a module.</description>
    <label>Charter Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Problems</fullName>
            </value>
            <value>
                <fullName>Politics</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>