force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>AAO_Content_Hash__c</fullName>
    <description>Written by: Rubric discovery, over proposition plus guidance. Read by: Identity; the only detector of an in-place edit. The platform refuses caseSensitive on a non-unique text field, so case sensitivity here is enforced in Apex, not by the field.</description>
    <label>Content Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>