force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Contract_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Contract_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Written by: AAO_EvidenceContractTrigger via AAO_ContractKey, frozen composer. Read by: Upsert target for discovery.</description>
    <externalId>true</externalId>
    <label>Contract Key</label>
    <length>83</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>