force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Contract_State__c.field-meta.xml
<CustomField>
    <fullName>AAO_Contract_State__c</fullName>
    <description>Written by: Discovery and ratification. Read by: Which contract extraction consults. Superseded stays readable.</description>
    <label>Contract State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derived</fullName>
            </value>
            <value>
                <fullName>Awaiting_Ratification</fullName>
            </value>
            <value>
                <fullName>Ratified</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>