force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Decay_Class__c.field-meta.xml
<CustomField>
    <fullName>AAO_Decay_Class__c</fullName>
    <description>Written by: Defaulted by source, overridable. Read by: Whether an establishment can lose standing. Cached, not derived.</description>
    <label>Decay Class</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Standing</fullName>
            </value>
            <value>
                <fullName>Decaying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>