force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Element_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Element_Count__c</fullName>
    <description>Written by: Element resolution. Read by: Coverage arithmetic; cardinality bound.</description>
    <label>Element Count</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>