force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Elements__c.field-meta.xml
<CustomField>
    <fullName>AAO_Elements__c</fullName>
    <description>JSON. Written by: Element resolution, read from guidance where named, model-proposed where not. Read by: Coverage adjudication; handed to the blind reader.</description>
    <label>Elements</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>