force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Elements_Basis__c.field-meta.xml
<CustomField>
    <fullName>AAO_Elements_Basis__c</fullName>
    <description>Written by: Element resolution. Read by: Whether a human is owed a look; the under-specified-question list.</description>
    <label>Elements Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authored</fullName>
            </value>
            <value>
                <fullName>Inferred_Ratified</fullName>
            </value>
            <value>
                <fullName>Inferred_Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>