force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Escalation_Threshold__c.field-meta.xml
<CustomField>
    <fullName>AAO_Escalation_Threshold__c</fullName>
    <description>Written by: Ratification. Read by: When a standing red surfaces and ages. Null inherits.</description>
    <label>Escalation Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>