force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Gating__c.field-meta.xml
<CustomField>
    <fullName>AAO_Gating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by: Rubric discovery. Read by: Day-one red.</description>
    <label>Gating</label>
    <type>Checkbox</type>
</CustomField>