force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Guidance_Text__c.field-meta.xml
<CustomField>
    <fullName>AAO_Guidance_Text__c</fullName>
    <description>Immutable. Written by: Rubric discovery, verbatim Help and Tip. Read by: The primary source of the parts.</description>
    <label>Guidance Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>