force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Per_Person_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Per_Person_Source__c</fullName>
    <description>Written by: Element resolution. Read by: Where the set of people comes from. Resolves in Apex, making the count deterministic and the empty-set guard free.</description>
    <label>Per Person Source</label>
    <type>Text</type>
    <length>80</length>
</CustomField>