force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>AAO_Prerequisites__c</fullName>
    <description>JSON. Written by: Element resolution. Read by: Live-set filtering. Promotable to a junction.</description>
    <label>Prerequisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>