force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Proposition_Code__c.field-meta.xml
<CustomField>
    <fullName>AAO_Proposition_Code__c</fullName>
    <description>Written by: Rubric discovery. Read by: Display only. Never identity.</description>
    <label>Proposition Code</label>
    <type>Text</type>
    <length>40</length>
</CustomField>