force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Proposition_Short__c.field-meta.xml
<CustomField>
    <fullName>AAO_Proposition_Short__c</fullName>
    <description>Immutable. Written by: Rubric discovery. Read by: Display. Never read as the proposition.</description>
    <label>Proposition Short</label>
    <type>Text</type>
    <length>255</length>
</CustomField>