force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Proposition_Text__c.field-meta.xml
<CustomField>
    <fullName>AAO_Proposition_Text__c</fullName>
    <description>Immutable. Written by: Rubric discovery, verbatim. Read by: The charter question. Never rewritten.</description>
    <label>Proposition Text</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>