force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Question_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AAO_Question_Record_Id__c</fullName>
    <description>Written by: Rubric discovery. Read by: Identity. The platform refuses caseSensitive on a non-unique text field, so case sensitivity here is enforced in Apex, not by the field.</description>
    <label>Question Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>