force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Ratified_By__c.field-meta.xml
<CustomField>
    <fullName>AAO_Ratified_By__c</fullName>
    <description>Written by: Ratification surface. Read by: Audit.</description>
    <label>Ratified By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>AAO_Ratified_Contracts</relationshipName>
    <relationshipLabel>AAO Ratified Contracts</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>