force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Ratified_On__c.field-meta.xml
<CustomField>
    <fullName>AAO_Ratified_On__c</fullName>
    <description>Written by: Ratification surface. Read by: Audit.</description>
    <label>Ratified On</label>
    <type>DateTime</type>
</CustomField>