force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Required_Map_Role__c.field-meta.xml
<CustomField>
    <fullName>AAO_Required_Map_Role__c</fullName>
    <description>Written by: Role charter, ratified. Read by: Which person must exist on the map. Seeds the ghost.</description>
    <label>Required Map Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>