force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Requires_Ratification__c.field-meta.xml
<CustomField>
    <fullName>AAO_Requires_Ratification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by: Ratification. Read by: Per-proposition override.</description>
    <label>Requires Ratification</label>
    <type>Checkbox</type>
</CustomField>