force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Route__c.field-meta.xml
<CustomField>
    <fullName>AAO_Route__c</fullName>
    <description>Written by: Computability classifier, ratified. Read by: Routing only. A question computable in principle whose field the org leaves blank routes to guidance, never to counting blanks as absences.</description>
    <label>Route</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>