force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Rubric_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Rubric_Version__c</fullName>
    <description>Written by: Rubric discovery. Read by: Stamped onto every claim under this contract.</description>
    <label>Rubric Version</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>