force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Solicit__c.field-meta.xml
<CustomField>
    <fullName>AAO_Solicit__c</fullName>
    <description>Written by: Computability classifier. Read by: Asks rather than waits.</description>
    <label>Solicit</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>