force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Speaker_Requirement__c.field-meta.xml
<CustomField>
    <fullName>AAO_Speaker_Requirement__c</fullName>
    <description>Written by: Element resolution. Read by: Who must be the source of the span carrying the assertion. Not who may appear in the set.</description>
    <label>Speaker Requirement</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Any_Participant</fullName>
            </value>
            <value>
                <fullName>Buyer_Side</fullName>
            </value>
            <value>
                <fullName>Decision_Maker_Or_Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>