force-app/main/default/objects/AAO_Evidence_Contract__c/fields/AAO_Superseded_By__c.field-meta.xml
<CustomField>
    <fullName>AAO_Superseded_By__c</fullName>
    <description>Written by: Discovery, on hash change. Read by: Lineage. Never deleted.</description>
    <label>Superseded By</label>
    <type>Lookup</type>
    <referenceTo>AAO_Evidence_Contract__c</referenceTo>
    <relationshipName>AAO_Supersedes</relationshipName>
    <relationshipLabel>AAO Supersedes</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>